# Neuron2Graph

./: .gitignore  pyproject.toml  requirements.txt
n2g/: __init__.py  augmenter.py  evaluate.py  feature_model.py  fit.py  neuron_model.py  neuron_store.py  run.py  sae_run.py  scrape.py  script.py  stats.py  tokenizer.py  train_and_eval.py  training_samples.py  word_tokenizer.py
n2g-rs/: Cargo.toml  n2g_rs.pyi  pyproject.toml
n2g-rs/src/: feature_model.rs  lib.rs  pyo3.rs  token.rs
n2g-rs/src/feature_model/: graphviz.rs
sandbox/: bootstrap.py  neuron_fit_test.ipynb  neuron_fit_test.py  neuron_model_structure.dot  render.py  sae_test.py  stats_test.py  structure.dot  test.py  test_better.py  test_old.py
scripts/: scrape.py  script.py
src/: scrape.py  script.py  script_old.py
src/n2g/: __init__.py  augmenter.py  fast_augmenter.py  neuron_model.py  neuron_store.py  run.py  stats.py  train_and_eval.py  training_samples.py  word_tokenizer.py
