[package]
name = "n2g"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "n2g_rs"
crate-type = ["cdylib"]

[dependencies]
graphviz-rust = "0.9.0"
itertools = "0.12.1"
louds-rs = { git = "https://github.com/LucaCappelletti94/louds-rs", features = [
    "serde",
] }
postcard = { version = "1.0.8", features = ["alloc"] }
pyo3 = "0.21.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
